Update UserService.java